# face-detect

./: .gitignore  README.md  circle.yml
.circleci/: config.yml
.circleci/images/: Dockerfile
trunk/: CMakeLists.txt
trunk/cmake/: FindBoost.cmake  pre-lib.cmake
trunk/src/common/: fd-common.hpp
trunk/src/include/opencv2/: cvconfig.h
trunk/src/main/: fd-main.cpp
trunk/src/utest/: CMakeLists.txt  fd-utest-main.cpp
